name:                   hsyslog-udp
version:                0.1.0.0
synopsis:               Syslog via UDP in Haskell according to RFC 5424
homepage:               https://github.com/Jonplussed/hsyslog-udp
license:                BSD3
license-file:           LICENSE
author:                 Jon Childress
maintainer:             jon@childr.es
category:               System
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >= 1.10

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -Werror
  exposed-modules:      System.Posix.Syslog.UDP

  Build-Depends:        base >= 3 && < 5
                      , bytestring == 0.10.*
                      , hostname == 1.*
                      , hsyslog == 3.*
                      , network == 2.6.*
                      , text == 1.2.*
                      , time == 1.5.*
                      , unix == 2.7.*

test-suite specs
  default-language:     Haskell2010
  hs-source-dirs:       test
  main-is:              Main.hs
  type:                 exitcode-stdio-1.0

  Build-Depends:        base >= 3 && < 5
                      , hspec == 2.2.*
                      , hsyslog-udp
