name:                   hsyslog-udp
version:                0.1.0.0
synopsis:               Syslog via UDP in Haskell according to RFC 5424
description:            Log messages to syslog over a network and via UDP according to <https://tools.ietf.org/html/rfc5424 RFC 5424>.
homepage:               https://github.com/ThoughtLeadr/hsyslog-udp
bug-reports:            https://github.com/ThoughtLeadr/hsyslog-udp/issues
license:                BSD3
license-file:           LICENSE
author:                 Jon Childress
maintainer:             jon@childr.es
category:               System
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >= 1.10

Source-Repository head
  type:                 git
  location:             git://github.com/ThoughtLeadr/hsyslog-udp.git

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
  exposed-modules:      System.Posix.Syslog.UDP

  Build-Depends:        base >= 3 && < 5
                      , bytestring == 0.10.*
                      , hsyslog == 4.*
                      , network == 2.6.*
                      , text == 1.2.*
                      , time == 1.5.*
                      , unix == 2.7.*

test-suite specs
  default-language:     Haskell2010
  hs-source-dirs:       test
  main-is:              Spec.hs
  type:                 exitcode-stdio-1.0
  other-modules:        System.Posix.Syslog.UDPSpec

  Build-Depends:        base >= 3 && < 5
                      , hspec == 2.2.*
                      , hsyslog-udp
                      , time == 1.5.*
